--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ repositories {
 
 dependencies {
     // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
-    implementation 'org.apache.commons:commons-lang3:3.17.0'
+    implementation 'org.apache.commons:commons-lang3:3.19.0'
 
     // https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
     implementation 'org.apache.commons:commons-collections4:4.4'
@@ -33,7 +33,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:2.0.17'
 
     // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
-    implementation 'ch.qos.logback:logback-classic:1.5.17'
+    implementation 'ch.qos.logback:logback-classic:1.5.20'
 
     // https://mvnrepository.com/artifact/cz.jirutka.rsql/rsql-parser
     implementation 'cz.jirutka.rsql:rsql-parser:2.1.0'
@@ -43,6 +43,12 @@ dependencies {
 
     // https://mvnrepository.com/artifact/jakarta.json/jakarta.json-api
     implementation("jakarta.json:jakarta.json-api:2.1.3")
+
+    // https://mvnrepository.com/artifact/jakarta.enterprise/jakarta.enterprise.cdi-api
+    implementation 'jakarta.enterprise:jakarta.enterprise.cdi-api:4.1.0'
+
+    // https://mvnrepository.com/artifact/org.jboss.weld.se/weld-se-core
+    implementation 'org.jboss.weld.se:weld-se-core:6.0.3.Final'
 
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.19.0'
@@ -67,6 +73,15 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml-schemas
     implementation 'org.apache.poi:poi-ooxml-schemas:4.1.2'
+
+    // https://mvnrepository.com/artifact/com.github.librepdf/openpdf
+    implementation 'com.github.librepdf:openpdf:3.0.0'
+
+    // https://mvnrepository.com/artifact/com.github.librepdf/openpdf-fonts-extra
+    implementation 'com.github.librepdf:openpdf-fonts-extra:3.0.0'
+
+    // https://mvnrepository.com/artifact/io.vavr/vavr
+    implementation 'io.vavr:vavr:0.10.7'
 }
 
 test {
