--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ dependencies {
     implementation 'org.apache.commons:commons-collections4:4.4'
 
     // https://mvnrepository.com/artifact/commons-io/commons-io
-    implementation 'commons-io:commons-io:2.18.0'
+    implementation 'commons-io:commons-io:2.20.0'
 
     // https://mvnrepository.com/artifact/org.apache.commons/commons-fileupload2-javax
     implementation 'org.apache.commons:commons-fileupload2-javax:2.0.0-M3'
@@ -82,6 +82,18 @@ dependencies {
 
     // https://mvnrepository.com/artifact/io.vavr/vavr
     implementation 'io.vavr:vavr:0.10.7'
+
+    // https://mvnrepository.com/artifact/net.lingala.zip4j/zip4j
+    implementation 'net.lingala.zip4j:zip4j:2.11.5'
+
+    // https://mvnrepository.com/artifact/org.reflections/reflections
+    implementation 'org.reflections:reflections:0.10.2'
+
+    // https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-common
+    implementation 'org.glassfish.jersey.core:jersey-common:3.1.11'
+
+    // https://mvnrepository.com/artifact/org.jetbrains/annotations
+    implementation 'org.jetbrains:annotations:26.0.2-1'
 }
 
 test {
